# mcp4chatgpt

./: .env.example  .gitignore  ChatGPT_学生使用指南_提示词总结.md  ChatGPT回复的改造计划.md  MCP4ChatGPT.command  README.md  pyproject.toml
deploy/: Caddyfile.example  Caddyfile.local  cloudflared-mcp4chatgpt.yml  com.vickers.mcp4chatgpt.plist
docs/: 01-ipv6-full-terminal-bridge-plan.md  02-paste-only-mcp-plan.md  03-future-full-mcp-evolution-plan.md  04-implementation-notes.md  05-architecture-and-logic.md  06-bug-and-architecture-analysis.md  07-browser-bridge-reference-and-roadmap.md  chrome_extension.md
scripts/: cleanup_codex_co_te.sh  dev.sh  extension_token.sh  open_logs.sh  rotate_logs.sh  start.sh  start_proxy.sh  start_tunnel.sh  status.sh  stop.sh  stop_proxy.sh  stop_tunnel.sh
src/chrome_extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
src/mcp4chatgpt/: audit.py  chrome_ops.py  config.py  ext_bridge.py  ext_ops.py  knowledge_ops.py  local_ops.py  oauth.py  safety.py  server.py  terminal_ops.py  tools.py  web_ops.py
src/mcp4chatgpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_server.py
