[project]
name = "mcp4chatgpt"
version = "0.1.0"
description = "ChatGPT Web MCP server for local ops, web ops, and source-grounded knowledge workflows."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mcp4chatgpt = "mcp4chatgpt.server:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
